2003-04-24  Ethan Merritt <merritt@u.washington.edu>

	* term/post.trm: The postscript terminal driver now implements
	pattern-fill via a (Level 1) PostScript subroutine rather than via
	a loop in the driver-level C code. Thanks to Dick Crawford.

	* src/bitmap.c src/gplt_x11.c src/win/wgraph.c 
	term/emf.trm term/gd.trm term/pdf.trm:
	Bring all terminal types that support pattern-fill into agreement
	about the order of patterns. The patterns have been chosen for
	maximum contrast in mono plots, and to favor symmetric patterns
	over diagonal lines that are hard to describe in figure captions.

	Pattern fill support is now uniform for the following terminals
		epslatex
		gd (png jpeg)
    		bitmap (pbm epson hp500c hpljii hppj)
    		pdf
		postscript
		pslatex
		windows
		x11
	Not implemented but probably should be
		eepic
		emf

2003-04-24  Ethan Merritt <merritt@u.washington.edu>

	* src/win/wgraph.c: Tweak previous correction to saved pen color
	so that it applies cleanly to box fill as well.

2003-04-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/wgraph.c (drawgraph): Fix signedness bug exposed by
	saving the "test" page to the clipboard.  Shift value of local
	variable "pen" by 2 to keep it non-negative.

	* config/makefile.cyg (CFLAGS): Add missing "endif".
	(veryclean): Remove pgnuplot.exe, too.

2003-04-18  Daniel J Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c (process_event): Patch "[ 707940 ] bug fix for
	graph height underflow 690018". Fixes graph size when mouse is
	on/off. The fix is simply to check if vchar > plot->height, and if
	so set plot->gheight to zero otherwise plot->gheight =
	plot->height - vchar.

2003-04-18  Harald Harders  <h.harders@tu-bs.de>

	* docs/psdoc/ps_fontfile_doc.tex: Patch "[ 696421 ] Improved
	ps_fontfile_doc". Some text is modified, the symbol table now
	includes the octal and decimal numbers of the characters.

2003-04-18  Petr Mikulik  <mikulik@physics.muni.cz>
